--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.67",
+    "@vuepress/bundler-vite": "^2.0.0-rc.19",
+    "@vuepress/client": "^2.0.0-rc.19",
+    "@vuepress/theme-default": "^2.0.0-rc.74",
+    "sass": "^1.84.0",
     "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.67"
+    "vuepress": "^2.0.0-rc.19"
   }
 }
