feat(docs): 为文档站点添加搜索功能
- 在 docs/.vuepress/config.ts 中引入 searchPlugin 并进行配置
- 更新 package.json 和 package-lock.json，添加 @vuepress/plugin-search 依赖
- 在 README.md 中添加搜索功能的相关说明

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.19",
     "@vuepress/client": "^2.0.0-rc.19",
+    "@vuepress/plugin-search": "^2.0.0-rc.74",
     "@vuepress/theme-default": "^2.0.0-rc.74",
     "sass": "^1.84.0",
     "vue": "^3.3.4",
